--- a/config-server/src/main/resources/shared/gateway-service.yml
+++ b/config-server/src/main/resources/shared/gateway-service.yml
@@ -1,25 +1,22 @@
+ribbon:
+  ReadTimeout: 20000
+  ConnectTimeout: 20000
+
 zuul:
   ignoredServices: '*'
   host:
     connect-timeout-millis: 20000
     socket-timeout-millis: 20000
-
   routes:
     auth-service:
       path: /uaa/** #path that will be intercepted
-      url: auth-service #which url the request will e mapped to
+      url: auth-service #which url the request will be mapped to
       stripPrefix: false #if zuul should replace the "/uaa/" segment
       sensitiveHeaders:
 
     account-service:
       path: /accounts/**
       serviceId: account-service
-      stripPrefix: false
-      sensitiveHeaders:
-
-    employee-search-service:
-      path: /employee/**
-      serviceId: employee-search-service
       stripPrefix: false
       sensitiveHeaders:
 
