--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,36 @@
-mongo-oauth:
-  image: mongo:4.0.4
-  restart: always
-  environment:
-    MONGO_INITDB_ROOT_USERNAME: root
-    MONGO_INITDB_ROOT_PASSWORD: example
-    MONGO_INITDB_DATABASE: oauth-db
-    MONGODB_USER: oauth-user
-    MONGODB_DATABASE: oauth-db
-    MONGODB_PASS: password
-  log_opt:
-    max-size: "10m"
-    max-file: "10"
-  ports:
-    - 27017:27017
-  volumes:
-    - ./mongo-init/init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh
+version: '3'
+services:
+    config-service:
+        container_name: config-service
+        build:
+            context: .
+            dockerfile: Dockerfile-configservice
+        image: config-service:latest
+        expose:
+            - 8888
+        ports:
+            - 8888:8888
+        networks:
+            - emp-network
+    registry-service:
+        container_name: eureka-service
+        build:
+            context: .
+            dockerfile: Dockerfile-registryservice
+        image: registry-service:latest
+        depends_on:
+            - config-service
+        environment:
+            - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+        entrypoint: /opt/bin/registry-service-entrypoint.sh
+        expose:
+            - 8761
+        ports:
+            - 8761:8761
+        networks:
+            - emp-network
+networks:
+    emp-network:
+        driver: bridge
 
-mongo-express-oauth:
-  image: mongo-express:0.49
-  restart: always
-  ports:
-    - 10081:8081
-  environment:
-    ME_CONFIG_MONGODB_ADMINUSERNAME: root
-    ME_CONFIG_MONGODB_ADMINPASSWORD: example
-    ME_CONFIG_MONGODB_SERVER: mongo-oauth
-    ME_CONFIG_MONGODB_PORT: 27017
-  links:
-    - mongo-oauth
 
