--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -1,9 +1,15 @@
 spring:
-  application:
-    name: auth-service
   cloud:
     config:
-      uri: http://localhost:8888
+      name: auth-service
+      discovery:
+        service-id: config
+        enabled: true
       fail-fast: true
       password: 1234
       username: user
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8001/eureka/
