--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
+  application:
+    name: config
   cloud:
     config:
       server:
         native:
-          search-locations: classpath:/shared #tells spring where to locate the config files
+          search-locations: file://${user.home}/Documents/MyProjects/microservices/application-config/shared #tells spring where to locate the config files
   profiles:
     active: native #we are using native because the config server uses a git repo by default
   security:
@@ -11,4 +13,11 @@ spring:
       password: 1234 #the password which apps will use to access its configurations
 
 server:
-  port: 8888 #the port where the config-server will be acessible
+  port: 8000 #the port where the config-server will be accessible
+
+eureka:
+  client:
+    region: default
+    registryFetchIntervalSeconds: 5
+    serviceUrl:
+      defaultZone: http://localhost:8001/eureka/
