--- a/config-server/src/main/resources/shared/application.yml
+++ b/config-server/src/main/resources/shared/application.yml
@@ -3,8 +3,8 @@ eureka:
   instance:
     prefer-ip-address: false
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    region: default
+    registryFetchIntervalSeconds: 5
 
 security:
   oauth2:
