--- a/config-server/src/main/resources/shared/registry-service.yml
+++ b/config-server/src/main/resources/shared/registry-service.yml
@@ -1,2 +1,13 @@
+spring:
+  application:
+    name: registry-service #name of the application
+
 server:
-  port: 8761 #the default port used for eureka servers
+  port: 8001 #the default port used for eureka servers
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8001/eureka/
+    register-with-eureka: false
+    fetch-registry: false
