--- a/Dockerfile-registryservice
+++ b/Dockerfile-registryservice
@@ -1,7 +1,7 @@
 FROM alpine-jdk:base
 MAINTAINER lanu
 COPY files/registry-service.jar /opt/lib/
-COPY files/registry-service-entrypoint.sh /opt/bin/registry-service-entrypoint.sh
-RUN chmod 755 /opt/bin/registry-service-entrypoint.sh
-EXPOSE 8761
+ENTRYPOINT ["/usr/bin/java"]
+CMD ["-jar", "/opt/lib/registry-service.jar"]
+EXPOSE 8001
 
