--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         native:
-          search-locations: file://${user.home}/Documents/MyProjects/microservices/application-config/shared #tells spring where to locate the config files
+          search-locations: classpath:/shared #tells spring where to locate the config files
   profiles:
     active: native #we are using native because the config server uses a git repo by default
   security:
