--- a/config-server/src/main/resources/shared/auth-service.yml
+++ b/config-server/src/main/resources/shared/auth-service.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      host: localhost
+      host: mongo-oauth #should be localhost (without Docker)
       port: 27017
       username: oauth-user
       password: password
